--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
-appnope==0.1.2
-arrow==0.14.7
-backcall==0.2.0
-beautifulsoup4==4.9.3
-certifi==2020.12.5
-chardet==4.0.0
-cloudscraper==1.2.58
-decorator==5.0.6
-distro==1.5.0
-ics==0.7
-idna==2.10
-jedi==0.18.0
-numpy==1.20.2
-pandas==1.2.3
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-prompt-toolkit==3.0.18
-ptyprocess==0.7.0
-Pygments==2.8.1
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2021.1
-requests==2.25.1
-requests-toolbelt==0.9.1
-six==1.15.0
-soupsieve==2.2.1
-tabula-py==2.2.0
-TatSu==5.6.1
-traitlets==5.0.5
-urllib3==1.26.4
-wcwidth==0.2.5
+appnope
+arrow
+backcall
+beautifulsoup4
+certifi
+chardet
+cloudscraper
+decorator
+distro
+ics
+idna
+jedi
+numpy
+pandas
+parso
+pexpect
+pickleshare
+prompt-toolkit
+ptyprocess
+Pygments
+pyparsing
+python-dateutil
+pytz
+requests
+requests-toolbelt
+six
+soupsieve
+tabula-py
+TatSu
+traitlets
+urllib3
+wcwidth
